--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,22 +1,63 @@
-/* Load Ubuntu font */
+@font-face {
+  font-family: "Ubuntu";
+  font-style: normal;
+  font-weight: 300;
+  src: local(""), url("../assets/fonts/ubuntu/ubuntu-v20-latin-300.woff2") format("woff2"),
+    url("../assets/fonts/ubuntu/ubuntu-v20-latin-300.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Ubuntu";
+  font-style: italic;
+  font-weight: 300;
+  src: local(""), url("../assets/fonts/ubuntu/ubuntu-v20-latin-300italic.woff2") format("woff2"),
+    url("../assets/fonts/ubuntu/ubuntu-v20-latin-300italic.woff") format("woff");
+}
+
 @font-face {
   font-family: "Ubuntu";
   font-style: normal;
   font-weight: 400;
-  src: url("./fonts/ubuntu-v19-latin/ubuntu-v19-latin-regular.woff2") format("woff2"),
-    url("./fonts/ubuntu-v19-latin/ubuntu-v19-latin-regular.woff") format("woff");
+  src: local(""), url("../assets/fonts/ubuntu/ubuntu-v20-latin-regular.woff2") format("woff2"),
+    url("../assets/fonts/ubuntu/ubuntu-v20-latin-regular.woff") format("woff");
 }
+
+@font-face {
+  font-family: "Ubuntu";
+  font-style: italic;
+  font-weight: 400;
+  src: local(""), url("../assets/fonts/ubuntu/ubuntu-v20-latin-italic.woff2") format("woff2"),
+    url("../assets/fonts/ubuntu/ubuntu-v20-latin-italic.woff") format("woff");
+}
+
 @font-face {
   font-family: "Ubuntu";
   font-style: normal;
   font-weight: 500;
-  src: url("./fonts/ubuntu-v19-latin/ubuntu-v19-latin-500.woff2") format("woff2"),
-    url("./fonts/ubuntu-v19-latin/ubuntu-v19-latin-500.woff") format("woff");
+  src: local(""), url("../assets/fonts/ubuntu/ubuntu-v20-latin-500.woff2") format("woff2"),
+    url("../assets/fonts/ubuntu/ubuntu-v20-latin-500.woff") format("woff");
 }
+
+@font-face {
+  font-family: "Ubuntu";
+  font-style: italic;
+  font-weight: 500;
+  src: local(""), url("../assets/fonts/ubuntu/ubuntu-v20-latin-500italic.woff2") format("woff2"),
+    url("../assets/fonts/ubuntu/ubuntu-v20-latin-500italic.woff") format("woff");
+}
+
 @font-face {
   font-family: "Ubuntu";
   font-style: normal;
   font-weight: 700;
-  src: url("./fonts/ubuntu-v19-latin/ubuntu-v19-latin-700.woff2") format("woff2"),
-    url("./fonts/ubuntu-v19-latin/ubuntu-v19-latin-700.woff") format("woff");
+  src: local(""), url("../assets/fonts/ubuntu/ubuntu-v20-latin-700.woff2") format("woff2"),
+    url("../assets/fonts/ubuntu/ubuntu-v20-latin-700.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Ubuntu";
+  font-style: italic;
+  font-weight: 700;
+  src: local(""), url("../assets/fonts/ubuntu/ubuntu-v20-latin-700italic.woff2") format("woff2"),
+    url("../assets/fonts/ubuntu/ubuntu-v20-latin-700italic.woff") format("woff");
 }
