fix remove superscript button in q-editor + remove format button

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -64,7 +64,10 @@
 
 // Global styles
 sup {
-  vertical-align: top;
   font-size: 0.8em;
   opacity: 0.6;
+}
+
+[class*="output"] sup {
+  vertical-align: top;
 }
