--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,8 +1,9 @@
+// https://fonts.google.com/specimen/Ubuntu
 @font-face {
   font-family: "Ubuntu";
   font-style: normal;
   font-weight: 300;
-  src: local(""), url("../assets/fonts/ubuntu/ubuntu-v20-latin-300.woff2") format("woff2"),
+  src: local("Ubuntu Light"), url("../assets/fonts/ubuntu/ubuntu-v20-latin-300.woff2") format("woff2"),
     url("../assets/fonts/ubuntu/ubuntu-v20-latin-300.woff") format("woff");
 }
 
@@ -10,7 +11,7 @@
   font-family: "Ubuntu";
   font-style: italic;
   font-weight: 300;
-  src: local(""), url("../assets/fonts/ubuntu/ubuntu-v20-latin-300italic.woff2") format("woff2"),
+  src: local("Ubuntu Light Italic"), url("../assets/fonts/ubuntu/ubuntu-v20-latin-300italic.woff2") format("woff2"),
     url("../assets/fonts/ubuntu/ubuntu-v20-latin-300italic.woff") format("woff");
 }
 
@@ -18,7 +19,7 @@
   font-family: "Ubuntu";
   font-style: normal;
   font-weight: 400;
-  src: local(""), url("../assets/fonts/ubuntu/ubuntu-v20-latin-regular.woff2") format("woff2"),
+  src: local("Ubuntu"), url("../assets/fonts/ubuntu/ubuntu-v20-latin-regular.woff2") format("woff2"),
     url("../assets/fonts/ubuntu/ubuntu-v20-latin-regular.woff") format("woff");
 }
 
@@ -26,7 +27,7 @@
   font-family: "Ubuntu";
   font-style: italic;
   font-weight: 400;
-  src: local(""), url("../assets/fonts/ubuntu/ubuntu-v20-latin-italic.woff2") format("woff2"),
+  src: local("Ubuntu Italic"), url("../assets/fonts/ubuntu/ubuntu-v20-latin-italic.woff2") format("woff2"),
     url("../assets/fonts/ubuntu/ubuntu-v20-latin-italic.woff") format("woff");
 }
 
@@ -34,7 +35,7 @@
   font-family: "Ubuntu";
   font-style: normal;
   font-weight: 500;
-  src: local(""), url("../assets/fonts/ubuntu/ubuntu-v20-latin-500.woff2") format("woff2"),
+  src: local("Ubuntu Medium"), url("../assets/fonts/ubuntu/ubuntu-v20-latin-500.woff2") format("woff2"),
     url("../assets/fonts/ubuntu/ubuntu-v20-latin-500.woff") format("woff");
 }
 
@@ -42,7 +43,7 @@
   font-family: "Ubuntu";
   font-style: italic;
   font-weight: 500;
-  src: local(""), url("../assets/fonts/ubuntu/ubuntu-v20-latin-500italic.woff2") format("woff2"),
+  src: local("Ubuntu Medium Italic"), url("../assets/fonts/ubuntu/ubuntu-v20-latin-500italic.woff2") format("woff2"),
     url("../assets/fonts/ubuntu/ubuntu-v20-latin-500italic.woff") format("woff");
 }
 
@@ -50,7 +51,7 @@
   font-family: "Ubuntu";
   font-style: normal;
   font-weight: 700;
-  src: local(""), url("../assets/fonts/ubuntu/ubuntu-v20-latin-700.woff2") format("woff2"),
+  src: local("Ubuntu Bold"), url("../assets/fonts/ubuntu/ubuntu-v20-latin-700.woff2") format("woff2"),
     url("../assets/fonts/ubuntu/ubuntu-v20-latin-700.woff") format("woff");
 }
 
@@ -58,7 +59,7 @@
   font-family: "Ubuntu";
   font-style: italic;
   font-weight: 700;
-  src: local(""), url("../assets/fonts/ubuntu/ubuntu-v20-latin-700italic.woff2") format("woff2"),
+  src: local("Ubuntu Bold Italic"), url("../assets/fonts/ubuntu/ubuntu-v20-latin-700italic.woff2") format("woff2"),
     url("../assets/fonts/ubuntu/ubuntu-v20-latin-700italic.woff") format("woff");
 }
 
@@ -67,7 +68,7 @@
   font-family: "CMG Sans";
   font-style: normal;
   font-weight: 500;
-  src: local(""), url("../assets/fonts/cmg-sans/CMGSans-MediumCnCAPS.woff2") format("woff2"),
+  src: local("CMG Sans Medium Condensed CAPS"), url("../assets/fonts/cmg-sans/CMGSans-MediumCnCAPS.woff2") format("woff2"),
     url("../assets/fonts/cmg-sans/CMGSans-MediumCnCAPS.woff") format("woff");
 }
 
@@ -75,7 +76,7 @@
   font-family: "CMG Sans";
   font-style: normal;
   font-weight: 700;
-  src: local(""), url("../assets/fonts/cmg-sans/CMGSans-BoldCnCAPS.woff2") format("woff2"),
+  src: local("CMG Sans Bold Condensed CAPS"), url("../assets/fonts/cmg-sans/CMGSans-BoldCnCAPS.woff2") format("woff2"),
     url("../assets/fonts/cmg-sans/CMGSans-BoldCnCAPS.woff") format("woff");
 }
 
