arrow active weergave

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -101,6 +101,15 @@ sup {
   flex:1;
 }
 
+.arrowKey {
+  border-top-style: outset;
+  border-top-width: 1px;
+}
+.arrowKeyActive {
+  border-color: $secondary;  
+}
+
+
 .body--light {
   .bg-subtoolbar {
     background: $grey-3 !important; // bg-grey-3
